[project]
name = "mental_health_assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "torch",
    "transformers",
    "langchain==0.3.1",
    "langgraph",
    "langchain-core",
    "accelerate",
    "sentencepiece",
    "protobuf",
    "bitsandbytes>=0.41.0",
    "peft>=0.7.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.2",
]
